--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "19.1.0",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
+    "react-multi-carousel": "^1.0.15",
     "swiper": "^12.0.1"
   },
   "devDependencies": {
