--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.9.0",
     "bootstrap": "^5.3.8",
-    "next": "15.5.3",
+    "next": "^16.0.7",
     "next-sanity": "^11.1.1",
     "react": "19.1.0",
     "react-bootstrap": "^2.10.10",
