--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.9.0",
     "bootstrap": "^5.3.8",
-    "next": "^16.0.7",
+    "next": "^15.5.7",
     "next-sanity": "^11.1.1",
-    "react": "19.1.0",
+    "react": "^19.2.1",
     "react-bootstrap": "^2.10.10",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.2.1",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
     "react-multi-carousel": "^1.0.15",
